# crawl4ai-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  context7.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-foundation/: 01-01-SUMMARY.md  01-02-PLAN.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/milestones/v1.0-phases/02-core-crawl/: 02-02-PLAN.md  (+2 more)
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-core-crawl/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-SUMMARY.md
.planning/phases/03-profile-system/: 03-01-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-extraction/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-multi-page-crawl/: 05-01-PLAN.md  05-01-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-authentication-sessions/: 06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-update-management/: 07-01-SUMMARY.md  07-02-SUMMARY.md
.planning/phases/08-verify-profiles-traceability/: 08-01-SUMMARY.md  08-VERIFICATION.md
.planning/quick/1-run-full-test-on-mcp-server-with-real-ur/: 1-PLAN.md  1-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: update.sh
src/crawl4ai_mcp/: profiles.py  server.py
src/crawl4ai_mcp/profiles/: default.yaml  fast.yaml  js_heavy.yaml  stealth.yaml
tests/: test_crawl_many.py  test_crawl_sitemap.py  test_deep_crawl.py  test_extraction.py  test_extraction_css.py  test_output_dir.py  test_politeness.py  test_profiles.py  test_sessions.py  test_update.py
(+17 files in other folders)
