[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "crawl4ai MCP server for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "crawl4ai>=0.8.0,<0.9.0",
]

[project.scripts]
crawl4ai-mcp = "crawl4ai_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl4ai_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["T201"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]
