[project]
name = "crawl4ai-mcp"
version = "1.0.0"
description = "MCP server that gives AI assistants web crawling superpowers via crawl4ai"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Potter Digital", email = "brian@potterdigital.com"}]
keywords = ["mcp", "crawl4ai", "web-scraping", "model-context-protocol", "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "crawl4ai>=0.8.0,<0.9.0",
]

[project.urls]
Homepage = "https://github.com/potterdigital/crawl4ai-mcp"
Repository = "https://github.com/potterdigital/crawl4ai-mcp"
Issues = "https://github.com/potterdigital/crawl4ai-mcp/issues"

[project.scripts]
crawl4ai-mcp = "crawl4ai_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl4ai_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["T201"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]
